--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -6,10 +6,60 @@
   font-size: large;
 }
 
-.slider {
-  color: red;
+
+.label {
+  font-size: 2em;
 }
 
-svg {
-  padding: 20px;
+button {
+  border: none;
+  border-radius: 20px;
+  padding: 10px 20px;
+  outline: none;
+  height: 50px;
+  width: 100px;
+  border-width: 0;
+  outline: none;
+  border-radius: 2px;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, .6);
+  background-color: #018786;
+  color: #ecf0f1;
+
+}
+
+button:focus {
+  outline: none;
+}
+
+button:hover {
+  background-color: #03DAC6;
+  transition: all ease 0.5s;
+  transform: translate(-4px, -4px)
+}
+
+button:active {
+  transform: translateY(0);
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  justify-content:center;
+}
+
+.home {
+  display: flex;
+  flex-direction: column;
+  justify-content:center; 
+  align-content: center;
+  margin: 4em;
+}
+
+#vis_barchart {
+  display: flex;
+  align-self: center;
+}
+
+h2 {
+  text-align: center;
 }
